--- a/Lectures/01.Intro-to-React-and-JSX/JSX Demo/index.html
+++ b/Lectures/01.Intro-to-React-and-JSX/JSX Demo/index.html
@@ -10,6 +10,6 @@
 <body>
     <noscript>You need js in order to run this application!</noscript> <!-- comment if the user do not have JS -->
     <div id="root"></div>
-    <script type="module" src="src/app.js"></script>
+    <script type="module" src="build/app.js"></script>
 </body>
 </html>
